# monitor

./: IMPROVEMENT_PLAN.md  LICENSE  README.md  SIMPLIFICATION_PLAN.md  SLURMGEN_PLAN.md  SPEC.md  STRUCTURE_COMPLEXITY.md  TESTS_CHANGED.md  pyproject.toml
.Trash-1000/info/: slurm_gen.trashinfo
examples/: local_monitoring_example.py  monitor_app.yaml  monitor_config.yaml  monitor_slurmgen.yaml
scripts/: __init__.py  check_config.py  monitor_cleanup.py  monitor_control.py  monitor_status.py  run_monitor.py
src/monitor/: __init__.py  action_queue.py  actions.py  app.py  condition_evaluator.py  conditions.py  config.py  controller.py  dispatcher.py  event_bindings.py  events.py  executor.py  job_client_protocol.py  local_client.py  loop.py  slurm_client.py  slurm_gen_client.py  slurm_job_client.py  states.py  submission.py  transition.py  watcher.py
state/: job1.job.json  job2.job.json  train.job.json
tests/: conftest.py  test_action_queue_comprehensive.py  test_action_queue_edge_cases.py  test_actions.py  test_conditions.py  test_controller.py  test_controller_edge_cases.py  test_controller_lifecycle.py  test_coverage_final_push.py  test_event_bindings.py  test_executor.py  test_integration_local_dependencies.py  test_local_client.py  test_persistence.py  test_persistence_comprehensive.py  test_persistence_edge_cases.py  test_utils_run.py  test_watcher_comprehensive.py  test_watcher_edge_cases.py
tests/actions/: test_action_binding.py  test_action_queue_edge_cases.py  test_actions.py  test_dispatcher.py  test_event_bindings.py  test_event_utils.py
(+41 files in other folders)
